make urls great again

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -88,7 +88,7 @@
 
 
       <figure>
-        <img src="../images/incubateur-telecom-bretagne-entree.jpg"
+        <img src="images/incubateur-telecom-bretagne-entree.jpg"
              alt="Entrée de l'incubateur tout neuf de Télécom Bretagne à Rennes" />
         <figcaption>
           <p class="telecom">
@@ -141,40 +141,40 @@
       <h2><a href="/pages/soutiens.html">Nos soutiens</a></h2>
       <h3>Partenaires</h3>
       <ul>
-        <li><a class="reference external image-reference" href="http://www.telecom-bretagne.eu/"><img alt="logo de telecom bretagne" src="../images/telecom-bretagne.gif" style="width: 100px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="http://actux.eu.org/"><img alt="logo de l'association Actux" src="../images/logo-actux.png" style="width: 100px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="http://kabucreative.com/"><img alt="logo de Kabu Creative" src="../images/kabu-creative.png" style="width: 100px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="https://www.kozea.fr/"><img class="align-right" src="../images/kozea-logo.svg" style="width: 240px; height: 100px;" alt="logo de Kozea" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.lacantine-brest.net/"><img class="align-right" src="../images/logo-cantine-brest.png" style="width: 100px; height: 100px;" alt="logo de La Cantine Brestoise" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.eesab.fr/rennes/labfab"><img class="align-right" src="../images/logo_LabfabEESAB.png" style="width: 100px; height: 100px;" alt="logo du LabFab EESAB" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.activdesign.eu/"><img class="align-right" src="../images/logo-ActivDesign.png" style="width: 100px; height: 100px;" alt="logo d'ActiveDesign" /></a></li>
-        <li><a class="reference external image-reference" href="http://digital-saint-malo.com/"><img class="align-right" src="../images/DSM_carre.png" style="width: 100px; height: 100px;" alt="logo de Digital Saint-Malo" /></a></li>
-        <li><a class="reference external image-reference" href="https://boutique.ed-diamond.com/"><img class="align-right" src="../images/ed_diamond.png" style="height: 100px;" alt="logo de Linux Mag (Éditions Diamond)" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.labfab.fr/"><img class="align-right" src="../images/logo-LabfabEtendu.png" style="height: 100px;" alt="logo du LabFab Etendu" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.veo-labs.com/"><img alt="logo de Veo Labs" src="../images/logo-veo-labs.jpg" style="width: 200px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.telecom-bretagne.eu/"><img alt="logo de telecom bretagne" src="images/telecom-bretagne.gif" style="width: 100px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="http://actux.eu.org/"><img alt="logo de l'association Actux" src="images/logo-actux.png" style="width: 100px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="http://kabucreative.com/"><img alt="logo de Kabu Creative" src="images/kabu-creative.png" style="width: 100px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="https://www.kozea.fr/"><img class="align-right" src="images/kozea-logo.svg" style="width: 240px; height: 100px;" alt="logo de Kozea" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.lacantine-brest.net/"><img class="align-right" src="images/logo-cantine-brest.png" style="width: 100px; height: 100px;" alt="logo de La Cantine Brestoise" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.eesab.fr/rennes/labfab"><img class="align-right" src="images/logo_LabfabEESAB.png" style="width: 100px; height: 100px;" alt="logo du LabFab EESAB" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.activdesign.eu/"><img class="align-right" src="images/logo-ActivDesign.png" style="width: 100px; height: 100px;" alt="logo d'ActiveDesign" /></a></li>
+        <li><a class="reference external image-reference" href="http://digital-saint-malo.com/"><img class="align-right" src="images/DSM_carre.png" style="width: 100px; height: 100px;" alt="logo de Digital Saint-Malo" /></a></li>
+        <li><a class="reference external image-reference" href="https://boutique.ed-diamond.com/"><img class="align-right" src="images/ed_diamond.png" style="height: 100px;" alt="logo de Linux Mag (Éditions Diamond)" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.labfab.fr/"><img class="align-right" src="images/logo-LabfabEtendu.png" style="height: 100px;" alt="logo du LabFab Etendu" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.veo-labs.com/"><img alt="logo de Veo Labs" src="images/logo-veo-labs.jpg" style="width: 200px; height: 100px;" /></a></li>
       </ul>
       <h3>Soutien Platine</h3>
       <ul>
-          <li><a class="reference external image-reference" href="https://www.python.org/psf/"><img alt="Python Software Foundation" src="../images/psf-logo-narrow-256x84-alpha.png" style="width: 256px; height: 84px;" /></a></li>
-          <li><a class="reference external image-reference" href="https://www.mozilla.org/fr/mission/"><img alt="Mozilla" src="../images/mozilla.png" style="width: 256px; height: 84px;" /></a></li>
+          <li><a class="reference external image-reference" href="https://www.python.org/psf/"><img alt="Python Software Foundation" src="images/psf-logo-narrow-256x84-alpha.png" style="width: 256px; height: 84px;" /></a></li>
+          <li><a class="reference external image-reference" href="https://www.mozilla.org/fr/mission/"><img alt="Mozilla" src="images/mozilla.png" style="width: 256px; height: 84px;" /></a></li>
       </ul>
       <h3>Soutien Or</h3>
       <ul>
-          <li><a class="reference external image-reference" href="https://www.itlink.fr/"><img alt="IT Link" src="../images/logo_itlink.png" style="height: 100px;" /></a></li>
-          <li><a class="reference external image-reference" href="https://www.lexsi.com/fr/"><img alt="Lexsi" src="../images/logo_lexsi.jpg" style="height: 100px;" /></a></li>
+          <li><a class="reference external image-reference" href="https://www.itlink.fr/"><img alt="IT Link" src="images/logo_itlink.png" style="height: 100px;" /></a></li>
+          <li><a class="reference external image-reference" href="https://www.lexsi.com/fr/"><img alt="Lexsi" src="images/logo_lexsi.jpg" style="height: 100px;" /></a></li>
       </ul>
       <h3>Soutien Bronze</h3>
       <ul>
-        <li><a class="reference external image-reference" href="https://www.yaal.fr/"><img alt="logo de Yaal" src="../images/yaal.png" style="width: 100px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.net-ng.com/"><img alt="logo de Net ng" src="../images/netng.svg" style="width: 100px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="https://www.planet-work.com/"><img alt="logo de planet work" src="../images/planet-work.svg" style="width: 300px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="http://algoo.fr/"><img alt="logo d'algoo" src="../images/algoo.png" style="width: 200px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="https://www.logilab.fr/"><img alt="logo de logilab" src="../images/logilab.svg" style="width: 200px; height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.lengow.com/fr/"><img alt="logo de lengow" src="../images/logo_lengow.png" style="height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="https://developer.orange.com/"><img alt="logo de orange" src="../images/logo-orange.png" style="height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="https://bearstech.com/"><img alt="logo de bearstech" src="../images/logo_bearstech.png" style="width: 300px;" /></a></li>
-        <li><a class="reference external image-reference" href="http://www.people-doc.fr/"><img alt="logo de people doc" src="../images/people_doc.png" style="height: 100px;" /></a></li>
-        <li><a class="reference external image-reference" href="https://www.alwaysdata.com/fr/"><img alt="logo d'always data" src="../images/logo_always_data.png" style="width: 300px;" /></a></li>
+        <li><a class="reference external image-reference" href="https://www.yaal.fr/"><img alt="logo de Yaal" src="images/yaal.png" style="width: 100px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.net-ng.com/"><img alt="logo de Net ng" src="images/netng.svg" style="width: 100px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="https://www.planet-work.com/"><img alt="logo de planet work" src="images/planet-work.svg" style="width: 300px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="http://algoo.fr/"><img alt="logo d'algoo" src="images/algoo.png" style="width: 200px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="https://www.logilab.fr/"><img alt="logo de logilab" src="images/logilab.svg" style="width: 200px; height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.lengow.com/fr/"><img alt="logo de lengow" src="images/logo_lengow.png" style="height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="https://developer.orange.com/"><img alt="logo de orange" src="images/logo-orange.png" style="height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="https://bearstech.com/"><img alt="logo de bearstech" src="images/logo_bearstech.png" style="width: 300px;" /></a></li>
+        <li><a class="reference external image-reference" href="http://www.people-doc.fr/"><img alt="logo de people doc" src="images/people_doc.png" style="height: 100px;" /></a></li>
+        <li><a class="reference external image-reference" href="https://www.alwaysdata.com/fr/"><img alt="logo d'always data" src="images/logo_always_data.png" style="width: 300px;" /></a></li>
       </ul>
       <p>
         <a class="soutien" href="/pages/nous-soutenir.html">Soutenez nous !</a>
